manifests/ldap/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ldap
  labels:
    app: ldap
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ldap
  template:
    metadata:
      labels:
        app: ldap
    spec:            
      containers:
        - name: ldap
          image: osixia/openldap:1.3.0
          volumeMounts:
            # - name: ldap-data
            #   mountPath: /var/lib/ldap
            # - name: ldap-config
            #   mountPath: /etc/ldap/slapd.d
            - name: ldap-certs
              mountPath: /container/service/slapd/assets/certs
            - name: ldif-config
              mountPath: >-
                /container/service/slapd/assets/config/bootstrap/ldif/custom/database.ldif
              subPath: database.ldif
          ports:
            - containerPort: 389
              name: openldap
          args:
            - '--copy-service'   
            - '--loglevel'
            - 'debug'
        - name: phpldapadmin
          image: osixia/phpldapadmin:0.9.0
          volumeMounts:
            - name: phpldapadmin-certs
              mountPath: /container/service/phpldapadmin/assets/apache2/certs
            - name: ldap-certs
              mountPath: /container/service/ldap-client/assets/certs
          ports:
            - containerPort: 443
      volumes:
        # - name: ldap-data
        #   emptyDir: {}
        # - name: ldap-config
        #   emptyDir: {}
        - name: ldap-certs
          emptyDir: {}
        - name: phpldapadmin-certs
          emptyDir: {}         
        - name: ldif-config
          configMap:
            name: ldif-config
