manifests/ldap/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ldap
  name: ldap
spec:
  ports:
    - port: 389
      name: ldap
    - port: 443
      name: https-admin
  selector:
    app: ldap
